# docs/swagger.json
@@ -92,6 +92,76 @@
                 }
             }
         },
+        "/user/contact/add": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Adding another user as a contact",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contact"
+                ],
+                "summary": "Add contact to User",
+                "parameters": [
+                    {
+                        "description": "New contact input",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.AddContactInputDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not found user",
+                        "schema": {
+                            "$ref": "#/definitions/httpexp.HttpExp"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/contact/list": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Unpaginated list of all contacts of User",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contact"
+                ],
+                "summary": "List all contacts",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not found user",
+                        "schema": {
+                            "$ref": "#/definitions/httpexp.HttpExp"
+                        }
+                    }
+                }
+            }
+        },
         "/user/me": {
             "get": {
                 "security": [
@@ -111,7 +181,7 @@
                     "200": {
                         "description": "User object",
                         "schema": {
-                            "$ref": "#/definitions/dto.GetMeOutputDto"
+                            "$ref": "#/definitions/dto.UserInfoOutputDto"
                         }
                     },
                     "404": {
@@ -128,26 +198,12 @@
         "dto.AddContactInputDto": {
             "type": "object",
             "required": [
-                "name"
+                "username"
             ],
             "properties": {
-                "name": {
+                "username": {
                     "type": "string",
                     "minLength": 2
-                }
-            }
-        },
-        "dto.GetMeOutputDto": {
-            "type": "object",
-            "properties": {
-                "avatarUri": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
                 }
             }
         },
@@ -179,7 +235,6 @@
         "dto.RegisterInputDto": {
             "type": "object",
             "required": [
-                "avatarUri",
                 "name",
                 "password"
             ],
@@ -201,6 +256,20 @@
             "type": "object",
             "properties": {
                 "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UserInfoOutputDto": {
+            "type": "object",
+            "properties": {
+                "avatarUri": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
