# src/api/dto/dto.go
@@ -3,9 +3,9 @@ package dto
 // -- RegisterUser
 // RegisterInputDto
 type RegisterInputDto struct {
-	Name      string `json:"name" binding:"required,omitempty" validate:"required,min=2"`
-	Password  string `json:"password" binding:"required,omitempty" validate:"required,min=6"`
-	AvatarUri string `json:"avatarUri" binding:"required" validate:"url|uri|base64url"`
+	Name      string `json:"name" validate:"required,min=2"`
+	Password  string `json:"password" validate:"required,min=6"`
+	AvatarUri string `json:"avatarUri" validate:"url|uri|base64url"`
 }
 
 // RegisterResponseDto
@@ -16,8 +16,8 @@ type RegisterResponseDto struct {
 // -- LoginUser
 // LoginInputDto
 type LoginInputDto struct {
-	Name     string `json:"name" binding:"required,omitempty" validate:"required,min=2"`
-	Password string `json:"password" binding:"required,min=6" validate:"required,min=6"`
+	Name     string `json:"name" validate:"required,min=2"`
+	Password string `json:"password" validate:"required,min=6"`
 }
 
 // LoginOutputDto
@@ -34,5 +34,5 @@ type UserInfoOutputDto struct {
 }
 
 type AddContactInputDto struct {
-	UserName string `json:"username" binding:"required" validate:"required,min=2"`
+	UserName string `json:"username" validate:"required,min=2"`
 }
